--- a/css/style.css
+++ b/css/style.css
@@ -1959,42 +1959,35 @@ content: '';
 }
 .news-list-wrapper{
 	padding-bottom: 30px;
+	padding-bottom: 5vw;
 }
 .news-list{
 	position: relative;
+	padding: 0 70px;
 }
 .news-list-item{
-	width: 29%;
-	float: left;
 	margin-bottom: 45px;
-	margin-left: 4%;
+	padding: 0 30px;
 	display: flex;
 }
 .news-list-item:last-child{
 	margin-bottom: 0;
 }
 .news-list-item.big{
-	width: 67%;
 	margin: 0;
 	display: block;
 }
-.news-list-item.big .video{
-    height: 405px;
-    width: auto;
-    margin: 0;
-}
 .news-list-item .video{
+    height: 405px;
 	overflow: hidden;
-	height: 105px;
-	width: 53%;
 	flex-shrink: 0;
-	margin-right: 20px;
 	border-radius: 26px;
 	background-color: #000;
 	box-shadow: none;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	margin-bottom: 25px;
 }
 .news-list-item .video iframe{
 	position: absolute;
@@ -2028,7 +2021,7 @@ content: '';
     border-left-color: #fff;
 }
 .news-list-box{
-	padding: 30px 100px;
+	padding: 30px;
 }
 .news .video-text{
 	color: #3e2062;
@@ -2115,7 +2108,7 @@ content: '';
 	right: 10px;
 }
 .our-list{
-	padding: 0 70px;
+	padding: 0 65px;
 }
 .our-list-item{
 	padding: 0 35px;
@@ -2143,7 +2136,10 @@ content: '';
 	position: relative;
 	width: 100%;
 	height: 100%;
-	background-color: #000;
+	background-color: #fff;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 .our-list-wrapper .slick-dots{
 	bottom: -50px;
@@ -2362,6 +2358,9 @@ content: '';
 		width: 80px;
 	}
 
+	.news-list{
+		padding: 0 45px;
+	}
 	body .news-list-item{
 		width: 30.33%;
 		box-sizing: border-box;
@@ -2369,11 +2368,6 @@ content: '';
 	}
 	.news-list-item:last-child{
 		margin-right: 0;
-	}
-	body .news-list-item.big{
-		width: 100%;
-		max-width: 100%;
-		margin: 0 0 40px;
 	}
 	.blog-title,
 	.blog-text{
@@ -2872,7 +2866,6 @@ content: '';
 
 	.news-list-item{
 		flex-direction: row;
-		float: none;
 		margin-bottom: 25px;
 		text-align: left;
 		width: auto;
@@ -3123,18 +3116,16 @@ content: '';
 	}
 
 	.news-list-item .video{
-		width: 40%;
-		height: 95px;
+		
 	}
 	.blog-text{
 		font-size: 18px;
 	}
 	.news-list-item{
-		margin-bottom: 30px;
-		width: 36%;
+		
 	}
 	.news-list-item.big{
-		width: 60%;
+		
 	}
 	.news-list-item.big .video{
 		height: 345px;
