--- a/css/style.css
+++ b/css/style.css
@@ -958,6 +958,18 @@ input[type="checkbox"]:checked{
 .mshow{
 	display: none;
 }
+
+.box-bg-image{
+    background-color: #1d2242;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
 /* Common styles> */
 
 
