--- a/css/style.css
+++ b/css/style.css
@@ -548,7 +548,7 @@ input[type="checkbox"]:checked{
 	border-top-color: #5d4dfd;
 }
 .dropdown-button .icon{
-	margin: 2px 3px -2px 0;
+	margin: 1px 3px -1px 0;
 }
 .dropdown{
 	display: none;
@@ -557,7 +557,7 @@ input[type="checkbox"]:checked{
 	text-align: left;
 }
 .header-nav-list-item .dropdown-link .icon{
-	margin: 2px 10px -2px 0;
+	margin: 1px 10px -1px 0;
 }
 
 .split{
@@ -1060,6 +1060,7 @@ header.box{
 .header-nav-list-item a.dropdown-button{
 	border: 2px solid #fff;
 	font-family: 'PFDinDisplayPro Regular', 'Open Sans', Arial, Helvetica, sans-serif;
+	padding: 2px 15px 4px;
 }
 .header-nav-list-item .dropdown{
 	background: #fff;
