--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ button:focus{
 	background-image: url('../images/icons/ch-icon.png');
 	background-size: 27px 18px;
 }
-.ch-icon{
+.jp-icon{
 	width: 27px;
 	height: 18px;
 	background-image: url('../images/icons/jp-icon.png');
