--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,10 @@ button:focus{
 	background: url('../images/colored-image-2.png') center no-repeat;
 	background-size: cover;
 }
+.colored-bg.v2.token-inside{
+	background: url(../images/token-bg.jpg) center no-repeat;
+	background-size: cover;
+}
 .colored-bg.v3{
 	background: url('../images/colored-image-3.png') center no-repeat;
 	background-size: cover;
