--- a/css/style.css
+++ b/css/style.css
@@ -1034,11 +1034,6 @@ input[type="checkbox"]:checked{
     line-height: 20px;
     font-weight: 400;
 }
-
-
-.ledger-wrapper{
-
-}
 /* Common styles> */
 
 
@@ -2321,6 +2316,67 @@ content: '';
 	max-height: 40%;
 }
 /* Social> */
+
+
+/* <Faq */
+.faq{}
+.faq-list{
+    font-size: 14px;
+    margin-top: 50px;
+}
+.faq-list + .faq-list{
+	margin-top: 90px;
+}
+.faq-list-title{
+    font-family: 'Exo 2',sans-serif;
+    font-size: 23px;
+    font-weight: 500;
+    letter-spacing: -1px;
+    color: #0058b7;
+    text-align: left;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+.faq-list-item{
+	border-top: 1px solid #e8edf3;
+}
+.faq-quest{
+    padding: 15px 0px 15px 0px;
+    color: #939393;
+    cursor: pointer;
+    position: relative;
+	transition: all .15s;
+}
+.faq-quest::after{
+    content: '';
+    position: absolute;
+    top: 17px;
+    right: 2px;
+    width: 5px;
+    height: 5px;
+    border-right: 2px solid;
+    border-bottom: 2px solid;
+    transform: rotate(-45deg);
+	transition: all .15s;
+}
+.faq-quest:hover{
+	color: #102448;
+}
+.faq-answer{
+	display: none;
+	line-height: 25px;
+    padding: 52px 0px 30px 0px;
+    color: #99a7b5;
+}
+.faq-answer p{}
+.faq-list-item.open{}
+.faq-list-item.open .faq-quest::after{
+    transform: rotate(45deg);
+}
+.faq-list-item.open .faq-answer{
+    border-top: 1px solid #e8edf3;
+}
+/* Faq> */
 
 
 /* <Responsive */
