--- a/css/style.css
+++ b/css/style.css
@@ -2320,7 +2320,8 @@ content: '';
 .faq{}
 .faq-list{
     font-size: 14px;
-    margin-top: 50px;
+    max-width: 70%;
+    margin: 50px auto 0;
 }
 .faq-list + .faq-list{
 	margin-top: 90px;
@@ -3188,6 +3189,10 @@ content: '';
 		margin-left: -15px;
 		margin-right: -15px;
 		padding: 15px 15px;
+	}
+
+	.faq-list{
+		max-width: 100%;
 	}
 }
 @media (max-width: 500px){
