--- a/css/style.css
+++ b/css/style.css
@@ -754,6 +754,20 @@ input[type="checkbox"]:checked{
 	height: 1020px;
 	background: url('../images/figures/blot-11.png') center no-repeat;
 }
+.blot-12{
+	top: 0;
+	right: 0;
+	width: 633px;
+	height: 443px;
+	background: url('../images/figures/blot-11.png') center no-repeat;
+}
+.blot-13{
+	top: 0;
+	left: 0;
+	width: 360px;
+	height: 420px;
+	background: url('../images/figures/blot-12.png') center no-repeat;
+}
 .rect{
 	position: absolute;
 }
@@ -1890,8 +1904,8 @@ content: '';
 	padding: 30px 0;
 }
 .partners-list{
-	padding: 104px 0 0;
-	margin-bottom: -124px;
+	padding: 80px 0 0;
+	margin-bottom: -80px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -1899,8 +1913,8 @@ content: '';
 .partners-list-item{
 	position: relative;
 	width: 33%;
-	height: 110px;
-	margin-bottom: 150px;
+	height: 180px;
+	margin-bottom: 80px;
 	box-sizing: border-box;
 }
 .partners-list-item img{
@@ -1910,7 +1924,7 @@ content: '';
 	bottom: 0;
 	left: 0;
 	max-height: 80%;
-	max-width: 80%;
+	max-width: 70%;
 	margin: auto;
 }
 /* Partners> */
@@ -3028,6 +3042,11 @@ content: '';
 		left: 0;
 		width: 182px;
 		height: 328px;
+	}
+	.blot-11{
+		top: 500px;
+		width: 360px;
+		height: 420px;
 	}
 	.blot-11{
 		top: 500px;
