--- a/css/style.css
+++ b/css/style.css
@@ -1906,7 +1906,6 @@ content: '';
 }
 .partners-list{
 	padding: 80px 0 0;
-	margin-bottom: -80px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -1914,19 +1913,11 @@ content: '';
 .partners-list-item{
 	position: relative;
 	width: 33%;
-	height: 180px;
-	margin-bottom: 80px;
 	box-sizing: border-box;
 }
 .partners-list-item img{
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	max-height: 80%;
-	max-width: 70%;
-	margin: auto;
+	display: block;
+	max-width: 100%;
 }
 /* Partners> */
 
@@ -2961,11 +2952,9 @@ content: '';
 
 	body .partners-list{
 		padding-top: 0;
-		margin-bottom: -40px;
 	}
 	body .partners-list-item{
 		width: 50%;
-		margin-bottom: 40px;
 	}
 
 	.bottom-panel-button:nth-child(1){
@@ -3260,14 +3249,7 @@ content: '';
 
 	body .partners-list-item{
 		width: 320px;
-		height: 140px;
-		margin-bottom: 20px;
 	}
-	body .partners-list{
-		margin-bottom: -20px;
-	}
-
-
 }
 @media (max-width: 400px){
 	body .main-image-wrapper{
@@ -3308,10 +3290,6 @@ content: '';
 	}
 	.partners-list{
 		padding-top: 50px;
-		margin-bottom: -100px;
-	}
-	.partners-list-item{
-		margin-bottom: 120px;
 	}
 	.box-title-ann{
 		margin-bottom: 30px;
@@ -3368,12 +3346,6 @@ content: '';
 	}
 	.roadmap-container{
 		margin-top: 60px;
-	}
-	.partners-list{
-		margin-bottom: -80px;
-	}
-	.partners-list-item{
-		margin-bottom: 100px;
 	}
 	footer.box{
 		font-size: 28px;
@@ -3443,10 +3415,6 @@ content: '';
 	}
 	.partners-list{
 		padding-top: 40px;
-		margin-bottom: -70px;
-	}
-	.partners-list-item{
-		margin: 0 0 40px 0;
 	}
 	footer.box{
 		padding-top: 40px;
