--- a/css/style.css
+++ b/css/style.css
@@ -772,7 +772,7 @@ input[type="checkbox"]:checked{
 	background-size: contain;
 }
 .blot-14{
-	bottom: 0;
+	bottom: 25%;
 	right: 0;
 	width: 226px;
 	height: 653px;
@@ -780,7 +780,7 @@ input[type="checkbox"]:checked{
 	background-size: contain;
 }
 .blot-15{
-	top: 0;
+	top: 25%;
 	left: 0;
 	width: 226px;
 	height: 653px;
